<!--
    Copyright (C) 2014 Arpit Khurana <arpitkh96@gmail.com>, Vishal Nehra <vishalmeham2@gmail.com>

    This file is part of Amaze File Manager.

    Amaze File Manager is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Sprint 10: directory navigation toolbar (Up / Back / Forward) -->
    <item
        android:id="@+id/nav_back"
        android:title="@string/nav_back"
        android:icon="@drawable/ic_arrow_back_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_forward"
        android:title="@string/nav_forward"
        android:icon="@drawable/ic_arrow_forward_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_up"
        android:title="@string/nav_up"
        android:icon="@drawable/ic_arrow_upward_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always" />
    <item android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home_white_24dp"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_white_24dp">
        <menu >
            <item android:title="@string/sort_by"
                android:id="@+id/sortby"/>
            <item android:title="@string/directorysort"
                android:id="@+id/dsort"/>
        </menu>

    </item>
    <item android:id="@+id/history"
        android:icon="@drawable/ic_history_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/history"/>
    <!-- Sprint 10: combined view options dialog (thumbnails / details / grid columns) -->
    <item
        android:id="@+id/view_options"
        android:icon="@drawable/ic_tune_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/view_options"/>
    <item android:id="@+id/media_servers"
        android:icon="@drawable/ic_settings_remote_white_24dp"
        app:showAsAction="never"
        android:title="@string/media_servers"/>
    <item android:id="@+id/smb_servers"
        android:icon="@drawable/ic_settings_remote_white_24dp"
        app:showAsAction="never"
        android:title="@string/smb_servers"/>
    <item android:id="@+id/webdav_servers"
        android:icon="@drawable/ic_settings_remote_white_24dp"
        app:showAsAction="never"
        android:title="@string/webdav_servers"/>
    <!-- Sprint 14: cross-device drop-zone (phone → Quest file upload). -->
    <item android:id="@+id/drop_zone"
        android:icon="@drawable/ic_settings_remote_white_24dp"
        app:showAsAction="never"
        android:title="@string/drop_zone_menu"/>
    <!-- Sprint 13: VR HUD overlay quick toggle. Title is updated at runtime
         in onPrepareOptionsMenu to reflect the current visibility. -->
    <item android:id="@+id/vr_hud_toggle"
        app:showAsAction="never"
        android:title="@string/vr_hud_overlay"/>
    <item
        android:id="@+id/view"
        android:title=""/>
    <item
        android:id="@+id/hiddenitems"
        android:visible="false"
        android:title="@string/hiddenfiles" />
    <item
        android:id="@+id/sethome"
        android:title="@string/set_as_home"/>
    <item
        android:id="@+id/extract"
        android:title="@string/extract"
        android:visible="false"/>

    <!-- orderInCategory=100 to have the element exit always at the end of the list -->
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="100"/>

</menu>
