<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/add_webdav_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webdav_field_name"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/add_webdav_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webdav_field_url"
        android:inputType="textUri"
        android:autofillHints="url" />

    <EditText
        android:id="@+id/add_webdav_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webdav_field_user"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/add_webdav_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webdav_field_pass"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <CheckBox
        android:id="@+id/add_webdav_anonymous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/webdav_field_anonymous" />

    <Button
        android:id="@+id/add_webdav_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/webdav_test_connection" />
</LinearLayout>
