<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014-2026 Arpit Khurana <arpitkh96@gmail.com>, Vishal Nehra <vishalmeham2@gmail.com>,
    Emmanuel Messulam<emmanuelbendavid@gmail.com>, Raymond Lai <airwave209gt at gmail.com> and Contributors.

    This file is part of Amaze File Manager.

    Amaze File Manager is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <RadioGroup
            android:id="@+id/view_options_layout_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/view_options_layout_list_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_options_layout_list" />

            <RadioButton
                android:id="@+id/view_options_layout_grid_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_options_layout_grid" />
        </RadioGroup>

        <TextView
            android:id="@+id/view_options_grid_columns_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/view_options_grid_columns" />

        <SeekBar
            android:id="@+id/view_options_grid_columns_seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/view_options_show_thumbnails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/view_options_show_thumbnails" />

        <CheckBox
            android:id="@+id/view_options_show_file_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_options_show_file_size" />

        <CheckBox
            android:id="@+id/view_options_show_last_modified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_options_show_last_modified" />

        <CheckBox
            android:id="@+id/view_options_show_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_options_show_permissions" />

        <CheckBox
            android:id="@+id/view_options_show_dividers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_options_show_dividers" />

        <CheckBox
            android:id="@+id/view_options_show_hidden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_options_show_hidden" />
    </LinearLayout>
</ScrollView>
