<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/add_media_server_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/add_media_server_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/media_servers_field_name"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/add_media_server_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/media_servers_field_url"
        android:inputType="textUri"
        android:autofillHints="url" />

    <EditText
        android:id="@+id/add_media_server_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/media_servers_field_user"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/add_media_server_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/media_servers_field_pass"
        android:inputType="textPassword"
        android:autofillHints="password" />
</LinearLayout>
